# graphics-cookbook

./: .gitignore  CMakeLists.txt  vcpkg.json
CMake/: CommonMacros.txt
TestProject/: CMakeLists.txt
TestProject/src/: main.cpp
dependencies/: CMakeLists.txt
dependencies/bgfx/: CMakeLists.txt
shared/: CMakeLists.txt  RendererBase.cpp  RendererBase.h  Utils.cpp  Utils.h
